--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,6 @@
                         </a>
                     </li>
                     {% endif %}
-
                     <!-- add Weibo, Zhihu by Hux, add target = "_blank" to <a> by Hux -->
                     {% if site.zhihu_username %}
                     <li>
@@ -46,8 +45,6 @@
                         </a>
                     </li>
                     {% endif %}
-
-
                     {% if site.facebook_username %}
                     <li>
                         <a target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
@@ -72,11 +69,11 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Theme by <a href="http://huangxuan.me">Hux</a> |
+                    Theme by <a href="https://505788057.github.io/">Vitae</a> |
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="91px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true" >
+                        src="https://ghbtns.com/github-btn.html?user=505788057&repo=505788057.github.io&type=star&count=true" >
                     </iframe>
                 </p>
             </div>
